--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCtype html>
 <html lang="en">
     <head>
-        <title>My project</title>
+        <title>Why it no more popular??</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../odin-recipes/recipes/css/lasagna.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <header>
+        <h1>Lonely No More!</h1>
+        <h2>Woo the person of you dreams!</h2>
+        
+        </header>
+        <a href="recipes/crabmax.html">Crab!</a>
         <a href="recipes/lasagna.html">Lasagna!</a>
     </body>
 </html>
