--- a/recipes/crabmax.html
+++ b/recipes/crabmax.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="css/practice.css"> 
     </head>
     <body>
-        <h1>Crab Max</h1>
+        <h1>crab</h1>
+        <h2 class="max">Max</h2>
         <img src="img/crab.jpg" class="crab1" alt="crab">
        <section>
         <h2>Description</h2>
@@ -27,14 +28,14 @@
             <li>Baguette</li>
             <li>1 Whole Live Crab (Living)</li>
             <li>A Large Pot</li>
-           
+           <hr>
         </ul>
     </section>
 
         <aside>
         <h3>Steps</h3>
             <ol>
-                <li>Fill your pot to about 2/3's full of Pepsi Max and add the salt too.</li>
+                <li>Fill your pot to about 2/3's full of Pepsi Max and add the salt.</li>
                 <li>Bring the large pot of lightly salted Pepsi Max to a boil.</li>
                 <li>Look crab in eyes.</li>
                 <li>Carefully add the live crab into the Pepsi Max. Make sure the crabs are all covered in Pepsi. Boil them until their shells are red.</li>
