--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h2>Woo the person of you dreams!</h2>
         
         </header>
+        <p>
+        <a href="recipes/lasagna.html">Lasagna!</a></p>
         <a href="recipes/crabmax.html">Crab!</a>
-        <a href="recipes/lasagna.html">Lasagna!</a>
     </body>
 </html>
