--- a/recipes/crabmax.html
+++ b/recipes/crabmax.html
@@ -3,12 +3,12 @@
     <head>
         <title>Real Crab!</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/practice.css"> 
+        <link rel="stylesheet" href="../css/crab.css"> 
     </head>
     <body>
         <h1>crab</h1>
         <h2 class="max">Max</h2>
-        <img src="img/crab.jpg" class="crab1" alt="crab">
+        <img src="../img/crab.jpg" class="crab1" alt="crab">
        <section>
         <h2>Description</h2>
         <p>Crabs are a type of shellfish that can be found in many different parts of the world.
