--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,12 +3,20 @@
     <head>
         <title>Lasagna</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/lasagna.css">
+        <link rel="stylesheet" href="../css/actuallasagna.css">
     </head>
     <body>
-        <h1>Lasagna A la Carte</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5981910.jpg&w=1200&h=678&c=sc&poi=face&q=85" alt="Lasagna">
-       
+
+        <header>
+          <a href="../index.html"><img id="logo" class="center" src="../img/chef.gif"></a>
+        </header>
+        
+        <div class="main">
+            <h1>Lasagna A la Carte</h1>
+            <img src="../img/lasagna.jpg">
+        </div>
+
+
         <h2>Description</h2>
         <p>This is Garfield's go to recipe. Stolen from Jon's grandma. 
             This will keep your guests coming back for more!</p>
