updated css and html

--- a/recipes/crabmax.html
+++ b/recipes/crabmax.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../css/crab.css"> 
     </head>
     <body>
+        <a href="../index.html"><img id="logo" class="center" src="../img/chef.gif"></a>
         <h1>crab</h1>
         <h2 class="max">Max</h2>
         <img src="../img/crab.jpg" class="crab1" alt="crab">
