--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <div class="item">
                     <a href="recipes/crabmax.html">
-                    <img src="img/crab.jpg" alt="pepsi crab">Soft Crab!</a>
+                    <img src="img/crab.jpg" alt="pepsi crab">Crab!</a>
                 </div>
                 
                 <div class="item">
