--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCtype html>
 <html lang="en">
     <head>
-        <title>Why it no more popular??</title>
+        <title>Fancy Eats</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -20,7 +20,7 @@
 
                 <div class="item">
                     <a href="recipes/crabmax.html">
-                    <img src="img/crab.jpg" alt="pepsi crab">Crab!</a>
+                    <img src="img/crab.jpg" alt="pepsi crab">Fancy Crab!</a>
                 </div>
                 
                 <div class="item">
